--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,6 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "underscore": "~1.8.3",
-    "less": "~2.5.0",
-    "requirejs": "~2.1.17",
-    "Chart.js": "~1.0.2",
-    "angularjs": "~1.3.15"
+    "less": "~2.5.0"
   }
 }
