--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "underscore": "~1.8.3",
-    "less": "~2.5.0"
+    "less": "~2.5.0",
+    "requirejs": "~2.1.17"
   }
 }
