--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
     "jquery": "~2.1.4",
     "underscore": "~1.8.3",
     "less": "~2.5.0",
-    "requirejs": "~2.1.17"
+    "requirejs": "~2.1.17",
+    "requirejs-plugins": "~1.0.3",
+    "moment": "~2.10.6"
   }
 }
